k8s/v1/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nginx
  namespace: backend
  labels:
    app: backend-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: backend-nginx
